// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Class Introspection Should able to override type with other type 1`] = `
Object {
  "constructor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Readonly",
              "kind": "Override",
              "type": OtherDummyClass,
            },
          ],
          "kind": "Parameter",
          "name": "dummy",
          "type": OtherDummyClass,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Class Introspection Should inspect array on constructor parameters 1`] = `
Object {
  "constructor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [
          Object {
            "kind": "Array",
            "type": EmptyClass,
          },
        ],
        "kind": "Parameter",
        "name": "empty",
        "type": Array [
          EmptyClass,
        ],
      },
    ],
  },
  "decorators": Array [
    Object {},
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Class Introspection Should inspect array on method parameter 1`] = `
Object {
  "constructor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "kind": "Array",
              "type": EmptyClass,
            },
          ],
          "kind": "Parameter",
          "name": "empty",
          "type": Array [
            EmptyClass,
          ],
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Class Introspection Should inspect class properly 1`] = `
Object {
  "constructor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Class Introspection Should inspect class with constructor parameters 1`] = `
Object {
  "constructor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "id",
        "type": undefined,
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "name",
        "type": undefined,
      },
    ],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Class Introspection Should inspect class with method parameters 1`] = `
Object {
  "constructor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "dummy",
          "type": undefined,
        },
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "other",
          "type": undefined,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Class Introspection Should inspect constructor parameters type with decorator 1`] = `
Object {
  "constructor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "id",
        "type": Number,
      },
      Object {
        "decorators": Array [],
        "kind": "Parameter",
        "name": "name",
        "type": String,
      },
    ],
  },
  "decorators": Array [
    Object {},
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;

exports[`Class Introspection Should inspect parameters type with method decorator 1`] = `
Object {
  "constructor": Object {
    "kind": "Constructor",
    "name": "constructor",
    "parameters": Array [],
  },
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "kind": "Method",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "dummy",
          "type": String,
        },
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "other",
          "type": Object,
        },
      ],
      "returnType": Number,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": DummyClass,
}
`;
